finish initializing Realm as data base

--- a/TodoeyFinal/Views/Base.lproj/Main.storyboard
+++ b/TodoeyFinal/Views/Base.lproj/Main.storyboard
@@ -43,7 +43,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Items" id="jye-q7-Cps">
-                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="HjK-Gv-MsN">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="HjK-Gv-MsN">
                             <color key="tintColor" systemColor="systemCyanColor"/>
                             <connections>
                                 <action selector="addButtonPressed:" destination="YhA-xG-J8W" id="mVr-QW-YMt"/>
@@ -97,7 +97,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Todoey" id="reD-DX-VPI">
-                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="5Xk-4Y-WU5">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="5Xk-4Y-WU5">
                             <color key="tintColor" systemColor="systemCyanColor"/>
                             <connections>
                                 <action selector="addButtonPressed:" destination="yBh-RO-EPX" id="6Ma-WN-Efl"/>
